--- a/web/src/css/quasar.variables.scss
+++ b/web/src/css/quasar.variables.scss
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
+$primary   : #3f51b5;
+$secondary : #f50057;
 $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
+$dark      : #1d1d1d;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive  : #4caf50;
+$negative  : #f44336;
+$info      : #2196f3;
+$warning   : #ff9800;
